force-app/main/default/objects/Case__e/Case__e.object-meta.xml
<CustomObject>
    <label>Case</label>
    <pluralLabel>Cases</pluralLabel>
</CustomObject>