force-app/main/default/objects/Case__e/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <label>Case_Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>