force-app/main/default/objects/Case__e/fields/CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseNumber__c</fullName>
    <label>CaseNumber</label>
    <length>40</length>
    <type>Text</type>
</CustomField>