force-app/main/default/objects/Case__e/fields/CaseSubject__c.field-meta.xml
<CustomField>
    <fullName>CaseSubject__c</fullName>
    <label>CaseSubject</label>
    <length>100</length>
    <type>Text</type>
</CustomField>